--- a/src/main/resources/com/avatarduel/GUI/CardGUI.fxml
+++ b/src/main/resources/com/avatarduel/GUI/CardGUI.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="card_border" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="303.0" style="-fx-background-color: RED;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="card_border" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="303.0" style="-fx-background-color: RED;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox id="card_container" alignment="TOP_CENTER" layoutX="25.0" layoutY="15.0" prefHeight="358.0" prefWidth="248.0" spacing="8.0" style="-fx-background-color: white;">
+      <VBox id="card_container" alignment="TOP_CENTER" layoutX="25.0" layoutY="15.0" prefHeight="383.0" prefWidth="255.0" spacing="8.0" style="-fx-background-color: white;">
          <children>
             <Label alignment="CENTER" text="NAMA KARTU" />
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
