--- a/src/main/resources/com/avatarduel/GUI/Card/CardGUI.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardGUI.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="card_border" styleClass="water_border" stylesheets="@../styles/CardGUI.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.CardGUI">
+<AnchorPane fx:id="card_border" styleClass="water_border" stylesheets="@styles/CardGUI.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.CardGUI">
    <children>
       <VBox fx:id="card_container" styleClass="container" alignment="TOP_CENTER" layoutX="25.0" layoutY="15.0" prefHeight="358.0" prefWidth="248.0" spacing="8.0" >
          <children>
             <Label fx:id="card_name" alignment="CENTER" text="NAMA KARTU" />
             <ImageView fx:id="card_img" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../card/image/character/Aang.png" />
+                  <Image url="@../../card/image/character/Aang.png" />
                </image>
             </ImageView>
             <Label fx:id="card_desc" wrapText="true" alignment="TOP_LEFT" prefHeight="112.0" prefWidth="200.0" text="Deskripsi Kartu ada di sini" textAlignment="CENTER" />
