--- a/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-
-</AnchorPane>
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="161.0" prefWidth="83.0" spacing="10.0"
+      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.avatarduel.guicontroller.CardOnHandController"
+      fx:id="container"
+      stylesheets="@styles/CardGUI.css">
+   <children>
+      <Label fx:id="card_name" alignment="CENTER" prefHeight="0.0" prefWidth="65.0" text="NAMA KARTU">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="card_img" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+         <Image  url="@../../card/image/character/Aang.png" />
+      </ImageView>
+      <VBox alignment="BOTTOM_LEFT" prefHeight="200.0" prefWidth="100.0">
+         <Label fx:id="card_att" text="ATT:" />
+         <Label fx:id="card_def" text="DEF:" />
+         <Label fx:id="card_pow" text="POW:" />
+         <padding>
+            <Insets left="5.0" />
+         </padding>
+      </VBox>
+   </children>
+</VBox>
