--- a/src/main/resources/com/avatarduel/GUI/MainMenu/MainMenu.fxml
+++ b/src/main/resources/com/avatarduel/GUI/MainMenu/MainMenu.fxml
@@ -6,7 +6,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@styles/MainMenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@styles/MainMenu.css"
+            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.avatarduel.guicontroller.MainMenuController">
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1920.0">
          <image>
