--- a/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
@@ -8,7 +8,7 @@
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="161.0" prefWidth="83.0" spacing="10.0"
       xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.avatarduel.guicontroller.CardOnHandController"
+      fx:controller="com.avatarduel.guicontroller.Card.CardOnHandController"
       fx:id="container"
       stylesheets="@styles/CardGUI.css">
    <children>
