--- a/src/main/resources/com/avatarduel/GUI/Card/CardOnPlay.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardOnPlay.fxml
@@ -14,7 +14,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="card_container" alignment="TOP_CENTER" prefHeight="148.0" prefWidth="120.0" spacing="8.0" styleClass="container" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CardOnPlayController">
+<VBox alignment="TOP_CENTER" prefHeight="148.0" prefWidth="120.0" spacing="8.0" styleClass="container"
+      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.avatarduel.guicontroller.Card.CardOnPlayController"
+      fx:id="card_border">
    <children>
          <Label fx:id="card_name" alignment="CENTER" text="NAMA KARTU">
             <font>
